Work on Layout Editor

--- a/src/main/resources/css/colors.css
+++ b/src/main/resources/css/colors.css
@@ -10,6 +10,8 @@
     -secondaryLightColor: #9ad5fb;
     -secondaryTextColor: #000000;
 
+    -light-gray: rgb(155,155,155);
+
     -start-green-gradient: #42E695;
     -stop-green-gradient: #3BB2B8;
 
