Fix grid layout

--- a/src/main/resources/css/control_panel.css
+++ b/src/main/resources/css/control_panel.css
@@ -1,5 +1,6 @@
 @import "colors.css";
-@import "control_panel/layout_editor/buttons.css";
+@import "font.css";
+@import "control_panel/layout_editor/layout_editor.css";
 
 .root {
     -fx-background-radius: 10px;
@@ -8,6 +9,7 @@
     -fx-padding: 20px;
     -fx-background-insets: 20;
     -fx-background-color: white;
+    -fx-font-family: "Nunito Sans Light";
 }
 
 #top-section {
@@ -47,52 +49,4 @@
 
 #app_scroll_pane #app_box {
     -fx-background-color: transparent;
-}
-
-/*Layout Editor*/
-
-.tab-pane
-{
-    -fx-tab-min-width:50px;
-    -fx-tab-max-height: 0 ;
-}
-
-.tab-pane:top .tab-content-area {
-    -fx-background-color: transparent;
-}
-
-.tab-pane .tab-header-area {
-    visibility: hidden ;
-}
-
-.tab-pane-controller {
-    -fx-background-color: transparent;
-}
-
-.tab-pane-controller .button{
-    -fx-background-color: transparent;
-    -fx-opacity: 0.8;
-    -fx-padding: 0px;
-    -fx-pref-height: 20px;
-    -fx-pref-width: 20px;
-}
-
-.portrait {
-    -fx-padding: 0 20 20 20;
-}
-
-.landscape {
-    -fx-padding: 20 20 20 0;
-}
-
-.tab-pane-controller .button .image-view{
-    -fx-effect: innershadow( gaussian , -primaryLightColor , 70 , 1 , 1 , 1 );
-}
-
-.tab-pane-controller .button .dot-selected{
-    -fx-effect: innershadow( gaussian , -secondaryColor , 70 , 1 , 1 , 1 );
-}
-
-.tab-pane-controller .button:hover{
-    -fx-opacity: 1;
 }
