--- a/src/main/resources/layouts/control_panel.fxml
+++ b/src/main/resources/layouts/control_panel.fxml
@@ -18,23 +18,11 @@
                <children>
                   <ToolBar prefHeight="40.0" prefWidth="200.0">
                     <items>
-                       <Button fx:id="send_files_tab_btn" mnemonicParsing="false" styleClass="tab-selected">
-                          <graphic>
-                             <ImageView fitHeight="20" fitWidth="20">
-                                <image>
-                                   <Image url="/assets/toolbar_icons/new_file.png" />
-                                </image>
-                             </ImageView>
-                          </graphic>
-                          <tooltip>
-                             <Tooltip text="%send_files" />
-                          </tooltip>
-                       </Button>
                        <Button fx:id="layouts_tab_btn" mnemonicParsing="false">
                           <graphic>
-                             <ImageView fitHeight="20" fitWidth="20">
+                             <ImageView fitHeight="18" fitWidth="18">
                                 <image>
-                                   <Image url="/assets/toolbar_icons/new_file.png" />
+                                   <Image url="/assets/toolbar_icons/grid.png" />
                                 </image>
                              </ImageView>
                           </graphic>
@@ -42,10 +30,49 @@
                              <Tooltip text="%send_files" />
                           </tooltip>
                        </Button>
+                       <Button fx:id="command_tab_btn" mnemonicParsing="false">
+                          <graphic>
+                             <ImageView fitHeight="18" fitWidth="18">
+                                <image>
+                                   <Image url="/assets/toolbar_icons/layers.png" />
+                                </image>
+                             </ImageView>
+                          </graphic>
+                          <tooltip>
+                             <Tooltip text="%send_files" />
+                          </tooltip>
+                       </Button>
+                       <Button fx:id="connection_tab_btn" mnemonicParsing="false" styleClass="tab-selected">
+                          <graphic>
+                             <ImageView fitHeight="24" fitWidth="24">
+                                <image>
+                                   <Image url="/assets/toolbar_icons/wifi.png" />
+                                </image>
+                             </ImageView>
+                          </graphic>
+                          <tooltip>
+                             <Tooltip text="%send_files" />
+                          </tooltip>
+                       </Button>
+
+                       <Button fx:id="search_btn" mnemonicParsing="false">
+                          <graphic>
+                             <ImageView fitHeight="18" fitWidth="18">
+                                <image>
+                                   <Image url="/assets/toolbar_icons/search.png" />
+                                </image>
+                             </ImageView>
+                          </graphic>
+                          <tooltip>
+                             <Tooltip text="%settings" />
+                          </tooltip>
+                       </Button>
+
                        <Pane id="filler_pane" HBox.hgrow="ALWAYS" />
+
                        <Button fx:id="settings_btn" mnemonicParsing="false">
                           <graphic>
-                             <ImageView fitHeight="20" fitWidth="20">
+                             <ImageView fitHeight="18" fitWidth="18">
                                 <image>
                                    <Image url="/assets/toolbar_icons/settings.png" />
                                 </image>
@@ -55,6 +82,7 @@
                              <Tooltip text="%settings" />
                           </tooltip>
                        </Button>
+
                     </items>
                   </ToolBar>
                </children>
