--- a/src/main/resources/css/search_dialog.css
+++ b/src/main/resources/css/search_dialog.css
@@ -52,6 +52,15 @@
     -fx-font-size: 18px;
 }
 
+.dokey-search-separator-box {
+    -fx-padding: 5 10 5 12;
+}
+
+.dokey-search-separator-title {
+    -fx-font-family: "Nunito Sans Light";
+    -fx-font-size: 18px;
+}
+
 .list-view {
     -fx-background-color: transparent;
 }
