--- a/src/main/resources/css/control_panel.css
+++ b/src/main/resources/css/control_panel.css
@@ -4,13 +4,21 @@
 @import "control_panel/toolbar.css";
 
 .root {
-    -fx-padding: 20px;
     -fx-font-family: "Nunito Sans Light";
 }
 
 #parent-box {
-    -fx-shape: "M512.234,504.913c0,8.284-6.716,15-15,15h-138.02l-11.074,10.738l-11.745-10.738H199.047c-8.284,0-15-6.716-15-15V81.893c0-8.284,6.716-15,15-15h298.188c8.284,0,15,6.716,15,15V504.913z";
     -fx-background-insets: 20px;
     -fx-background-color: white;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0, 0.3), 20, 0, 4, 4);
+}
+
+.windows-panel {
+    -fx-shape: "M512.234,504.913c0,8.284-6.716,15-15,15h-138.02l-11.074,10.738l-11.745-10.738H199.047c-8.284,0-15-6.716-15-15V81.893c0-8.284,6.716-15,15-15h298.188c8.284,0,15,6.716,15,15V504.913z";
+    -fx-padding: 20px;
+}
+
+.mac-panel {
+    -fx-padding: 30px 20px 10px 20px;
+    -fx-shape: "m184.04798,92.63101c0,-8.284 6.716,-15 15,-15l138.02,0l11.074,-10.738l11.745,10.738l137.348,0c8.284,0 15,6.716 15,15l0,423.02c0,8.284 -6.716,15 -15,15l-298.188,0c-8.284,0 -15,-6.716 -15,-15l0,-423.02l0.001,0z";
 }
