First draft of tabs

--- a/src/main/resources/layouts/control_panel.fxml
+++ b/src/main/resources/layouts/control_panel.fxml
@@ -14,79 +14,7 @@
    <children>
       <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="352.0">
          <top>
-            <VBox id="top-section" BorderPane.alignment="CENTER">
-               <children>
-                  <ToolBar prefHeight="40.0" prefWidth="200.0">
-                    <items>
-                       <Button fx:id="layouts_tab_btn" mnemonicParsing="false">
-                          <graphic>
-                             <ImageView fitHeight="24" fitWidth="24">
-                                <image>
-                                   <Image url="/assets/toolbar_icons/grid.png" />
-                                </image>
-                             </ImageView>
-                          </graphic>
-                          <tooltip>
-                             <Tooltip text="%send_files" />
-                          </tooltip>
-                       </Button>
-                       <Button fx:id="command_tab_btn" mnemonicParsing="false">
-                          <graphic>
-                             <ImageView fitHeight="24" fitWidth="24">
-                                <image>
-                                   <Image url="/assets/toolbar_icons/layers.png" />
-                                </image>
-                             </ImageView>
-                          </graphic>
-                          <tooltip>
-                             <Tooltip text="%send_files" />
-                          </tooltip>
-                       </Button>
-                       <Button fx:id="connection_tab_btn" mnemonicParsing="false" styleClass="tab-selected">
-                          <graphic>
-                             <ImageView fitHeight="24" fitWidth="24">
-                                <image>
-                                   <Image url="/assets/toolbar_icons/wifi.png" />
-                                </image>
-                             </ImageView>
-                          </graphic>
-                          <tooltip>
-                             <Tooltip text="%send_files" />
-                          </tooltip>
-                       </Button>
-
-                       <Button fx:id="search_btn" mnemonicParsing="false">
-                          <graphic>
-                             <ImageView fitHeight="24" fitWidth="24">
-                                <image>
-                                   <Image url="/assets/toolbar_icons/search.png" />
-                                </image>
-                             </ImageView>
-                          </graphic>
-                          <tooltip>
-                             <Tooltip text="%settings" />
-                          </tooltip>
-                       </Button>
-
-                       <Pane id="filler_pane" HBox.hgrow="ALWAYS" />
-
-                       <Button fx:id="settings_btn" mnemonicParsing="false">
-                          <graphic>
-                             <ImageView fitHeight="24" fitWidth="24">
-                                <image>
-                                   <Image url="/assets/toolbar_icons/settings.png" />
-                                </image>
-                             </ImageView>
-                          </graphic>
-                          <tooltip>
-                             <Tooltip text="%settings" />
-                          </tooltip>
-                       </Button>
-
-                    </items>
-                  </ToolBar>
-               </children>
-            </VBox>
+            <VBox id="top-section" BorderPane.alignment="CENTER" fx:id="top_section" />
          </top>
          <center>
             <VBox id="content_box" fx:id="content_box" />
