--- a/src/main/resources/css/control_panel.css
+++ b/src/main/resources/css/control_panel.css
@@ -2,6 +2,7 @@
 @import "font.css";
 @import "control_panel/layout_editor/layout_editor.css";
 @import "control_panel/toolbar.css";
+@import "control_panel/tab_selector/tab_selector.css";
 
 .root {
     -fx-font-family: "Nunito Sans Light";
