First draft of tab selector

--- a/src/main/resources/css/control_panel/tab_selector/tab_selector.css
+++ b/src/main/resources/css/control_panel/tab_selector/tab_selector.css
@@ -1,11 +1,23 @@
 .tab-selector-tab {
-    -fx-shape: "m177.5,258.5c0,0 244.20483,0 243.5,-0.5c0.70483,0.5 -34.5,-99.5 -35,-100c0.5,0.5 -11.5,-30.5 -76.5,-29.5c-65,1 -40,1 -40.5,0.5c0.5,0.5 -62.5,0.5 -72.5,42.5c-10,42 -19,87 -19,87z";
+    -fx-shape: "M35.6570063,-1 L92.3429937,-1 C98.2387429,-1 100.376593,-0.553069998 102.634478,0.360922571 C104.892363,1.27491514 106.788997,2.65597028 108.352028,4.52422054 C109.91506,6.39247081 110.996733,8.28987252 112.806744,13.9009078 L128,61 L0,61 L15.1932556,13.9009078 C17.0032669,8.28987252 18.08494,6.39247081 19.6479716,4.52422054 C21.2110031,2.65597028 23.1076371,1.27491514 25.365522,0.360922571 C27.6234069,-0.553069998 29.7612571,-1 35.6570063,-1 Z";
+    -fx-pref-height: 60px;
+
+    -fx-background-color: #e5e5e5;
+
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0, 0.5), 7, 0, 0, 3);
+
+    -fx-border-width: 5px;
+    -fx-border-color: linear-gradient(from 0% 100% to 0% 95%, rgba(0,0,0,0.1), transparent);
+    -fx-border-style: solid;
 }
 
-.tab-selector-tab.tab-left {
-    -fx-shape: "m80.07143,229.5l216.92857,-0.5l-39,-113c0.5,0.5 -9.5,-34.5 -96.5,-33.5c-87,1 -82,41 -82.5,40.5c0.5,0.5 -2.92857,-12.5 1.07143,106.5z"
+.tab-selector-tab .label {
+    -fx-font-family: "Nunito Sans Light";
+    -fx-font-size: 12px;
 }
 
-.tab-selector-tab.tab-right {
-    -fx-shape: "m427.238,145.77103l-206.238,-0.5l37.07802,-113c-0.47536,0.5 9.03183,-34.5 91.74434,-33.5c82.71251,1 77.95892,41 78.43428,40.5c-0.47536,0.5 2.78424,-12.5 -1.01862,106.5l-0.00001,0z";
+.tab-selector-tab.tab-selected {
+    -fx-background-color: white;
+
+    -fx-border-color: transparent;
 }
