--- a/src/main/resources/css/control_panel/layout_editor/section_bar.css
+++ b/src/main/resources/css/control_panel/layout_editor/section_bar.css
@@ -13,19 +13,19 @@
     -fx-background-color: transparent;
 }
 
-.app_scroll_pane .hbox {
+.app_scroll_pane > .hbox {
     -fx-background-color: transparent;
-}
-
-.app_scroll_pane .button {
-    -fx-background-color: transparent;
-    -fx-padding: 6px 8px 6px 8px;
 }
 
 .app-selector-vbox {
     -fx-spacing: 3px;
 }
 
-.app_scroll_pane .button:hover {
+.app-scroll-pane-button {
+    -fx-background-color: transparent;
+    -fx-padding: 6px 8px 6px 8px;
+}
+
+.app-scroll-pane-button:hover {
     -fx-effect: innershadow( one-pass-box , rgba(255,255,255,0.2), 70 , 1 , 1 , 1 );
 }
