--- a/src/main/resources/layouts/control_panel.fxml
+++ b/src/main/resources/layouts/control_panel.fxml
@@ -12,12 +12,13 @@
 
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" id="parent-box" fx:controller="app.control_panel.controllers.ControlPanelController">
    <children>
-      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="352.0">
+      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                  prefWidth="352.0" prefHeight="680">
          <top>
             <VBox id="top-section" BorderPane.alignment="CENTER" fx:id="top_section" />
          </top>
          <center>
-            <VBox id="content_box" fx:id="content_box" />
+            <TabPane fx:id="tab_pane" styleClass="main-tab-pane"/>
          </center>
       </BorderPane>
    </children>
