--- a/src/main/resources/layouts/control_panel.fxml
+++ b/src/main/resources/layouts/control_panel.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.image.Image?>
 
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" id="parent-box" fx:controller="app.control_panel.controllers.ControlPanelController">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:id="parent_box" id="parent-box" fx:controller="app.control_panel.controllers.ControlPanelController">
    <children>
       <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
                   prefWidth="400.0" prefHeight="680">
