--- a/src/main/resources/css/control_panel/tab_selector/tab_selector.css
+++ b/src/main/resources/css/control_panel/tab_selector/tab_selector.css
@@ -18,6 +18,9 @@
 
 .tab-selector-tab.tab-selected {
     -fx-background-color: white;
-
     -fx-border-color: transparent;
+}
+
+.tab-selector {
+    -fx-background-color: #e5e5e5;
 }
