--- a/src/main/resources/css/control_panel.css
+++ b/src/main/resources/css/control_panel.css
@@ -1,10 +1,12 @@
 @import "colors.css";
 @import "font.css";
+@import "ui/expandable-search-bar.css";
 @import "control_panel/layout_editor/layout_editor.css";
 @import "control_panel/layout-toolbar.css";
 @import "control_panel/tab_selector/tab_selector.css";
 @import "control_panel/coming_soon.css";
 @import "control_panel/devices/devices_tab.css";
+@import "control_panel/command/command.css";
 
 .root {
     -fx-font-family: "Nunito Sans Light";
