Add icon button

--- a/src/main/resources/css/control_panel.css
+++ b/src/main/resources/css/control_panel.css
@@ -1,6 +1,6 @@
 @import "colors.css";
 @import "font.css";
-@import "ui/expandable-search-bar.css";
+@import "ui/ui.css";
 @import "control_panel/layout_editor/layout_editor.css";
 @import "control_panel/layout-toolbar.css";
 @import "control_panel/tab_selector/tab_selector.css";
