--- a/src/main/resources/css/control_panel/command/toolbar.css
+++ b/src/main/resources/css/control_panel/command/toolbar.css
@@ -1,3 +1,8 @@
 .command-tab-toolbar {
     -fx-padding: 5px 10px 5px 10px;
 }
+
+.command-tab-toolbar-filter-label {
+    -fx-padding: 1px;
+    -fx-font-size: 15px;
+}
