--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -1,3 +1,5 @@
 @import "expandable_search_bar.css";
 @import "icon_button.css";
 @import "sorting_button.css";
+@import "styled_list_view.css";
+@import "collapse_expand_button.css";
