--- a/src/main/resources/css/control_panel/command/list_header.css
+++ b/src/main/resources/css/control_panel/command/list_header.css
@@ -1,4 +1,5 @@
 .command-tab-list-header {
     -fx-background-color: linear-gradient(to bottom right, -start-green-gradient, -stop-green-gradient);
     -fx-padding: 2px 5px 2px 48px;
+    -fx-font-family: "Nunito Sans Bold";
 }
