Floating action button

--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -3,3 +3,4 @@
 @import "sorting_button.css";
 @import "styled_list_view.css";
 @import "collapse_expand_button.css";
+@import "floating_action_button.css";
