--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -4,3 +4,4 @@
 @import "styled_list_view.css";
 @import "collapse_expand_button.css";
 @import "floating_action_button.css";
+@import "save_button.css";
