--- a/src/main/resources/css/control_panel.css
+++ b/src/main/resources/css/control_panel.css
@@ -7,6 +7,7 @@
 @import "control_panel/coming_soon.css";
 @import "control_panel/devices/devices_tab.css";
 @import "control_panel/command/command.css";
+@import "control_panel/settings/settings.css";
 
 .root {
     -fx-font-family: "Nunito Sans Light";
