--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -7,3 +7,5 @@
 @import "rounded_button.css";
 @import "floating_action_button.css";
 @import "save_button.css";
+@import "styled_text_field.css";
+@import "styled_text_area.css";
