--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -1,3 +1,4 @@
+@import "list_cell/list_cells.css";
 @import "expandable_search_bar.css";
 @import "icon_button.css";
 @import "sorting_button.css";
@@ -10,3 +11,4 @@
 @import "styled_text_field.css";
 @import "styled_text_area.css";
 @import "image_selector.css";
+@import "styled_combo_box.css";
