--- a/src/main/resources/css/ui/styled_text_field.css
+++ b/src/main/resources/css/ui/styled_text_field.css
@@ -3,3 +3,7 @@
     -fx-background-radius: 5px;
     -fx-font-family: "Nunito Sans Regular";
 }
+
+.styled-text-field:disabled {
+    -fx-opacity: 1;
+}
