Improve keyboard shortcut builder

--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -16,3 +16,4 @@
 @import "styled_label.css";
 @import "round_border_button.css";
 @import "shortcut_field.css";
+@import "application_select_button.css";
