--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -17,3 +17,4 @@
 @import "round_border_button.css";
 @import "shortcut_field.css";
 @import "application_select_button.css";
+@import "grid_view.css";
