--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -18,3 +18,4 @@
 @import "shortcut_field.css";
 @import "application_select_button.css";
 @import "grid_view.css";
+@import "selection_list_view.css";
