Add Action popup

--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -1,4 +1,5 @@
 @import "list_cell/list_cells.css";
+@import "popup/popup.css";
 @import "expandable_search_bar.css";
 @import "icon_button.css";
 @import "sorting_button.css";
@@ -19,3 +20,4 @@
 @import "application_select_button.css";
 @import "grid_view.css";
 @import "selection_list_view.css";
+@import "image_title_description_button.css";
