--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -1,5 +1,6 @@
 @import "list_cell/list_cells.css";
 @import "popup/popup.css";
+@import "panel/panel.css";
 @import "expandable_search_bar.css";
 @import "icon_button.css";
 @import "sorting_button.css";
